<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_main">

    <fragment
        android:id="@+id/nav_main"
        android:name="com.themovieviewer.presentation.ui.main.MainFragment"
        android:label="@string/menu_main"
        tools:layout="@layout/fragment_main" />

    <fragment
        android:id="@+id/nav_movie_details"
        android:name="com.themovieviewer.presentation.ui.main.MainFragment"
        android:label="@string/menu_movie_details"
        tools:layout="@layout/fragment_movie_details" />

    <fragment
        android:id="@+id/nav_home"
        android:name="com.themovieviewer.presentation.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.themovieviewer.presentation.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.themovieviewer.presentation.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>