<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.themovieviewer.presentation.ui.moviedetails.MovieDetailsFragmentViewModel" />
    </data>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            >
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/startGuideLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.05"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/endGuideLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.95"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <ImageView
                android:id="@+id/profile"
                android:layout_margin="20dp"
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:imageFromUrl="@{viewModel.posterImage}"
                tools:src="@drawable/test"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/name"
                android:layout_margin="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="20sp"
                tools:text="Ma Dong-seok"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile"/>

            <LinearLayout
                android:id="@+id/externalIds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/facebook"
                    android:layout_margin="5dp"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    tools:background="@drawable/facebook"/>
                <Button
                    android:id="@+id/twitter"
                    android:layout_margin="5dp"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    tools:background="@drawable/twitter"/>

                <Button
                    android:id="@+id/instagram"
                    android:layout_margin="5dp"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    tools:background="@drawable/instagram"/>

                <Button
                    android:id="@+id/link"
                    android:layout_margin="5dp"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    tools:background="@drawable/link"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/peopleInformation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="@+id/endGuideLine"
                app:layout_constraintStart_toStartOf="@+id/startGuideLine"
                app:layout_constraintTop_toBottomOf="@+id/externalIds">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:text="@string/tv_personal_info"/>
                <TextView
                    android:id="@+id/tv_personal_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    tools:text="AAAAAAAA"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:text="@string/tv_known_credits"/>
                <TextView
                    android:id="@+id/tv_known_credits"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    tools:text="AAAAAAAA"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:text="@string/tv_gender"/>
                <TextView
                    android:id="@+id/tv_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    tools:text="AAAAAAAA"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:text="@string/tv_birthday"/>
                <TextView
                    android:id="@+id/tv_birthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    tools:text="AAAAAAAA"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:text="@string/tv_place_of_births"/>
                <TextView
                    android:id="@+id/tv_place_of_births"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    tools:text="AAAAAAAA"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:text="@string/tv_known_for"/>
                <TextView
                    android:id="@+id/tv_known_for"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    tools:text="AAAAAAAA"/>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_biography"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:text="@string/tv_biography"
                app:layout_constraintStart_toStartOf="@+id/startGuideLine"
                app:layout_constraintTop_toBottomOf="@+id/peopleInformation"/>

            <TextView
                android:id="@+id/tv_known_for_movie"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                tools:text="AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
                app:layout_constraintStart_toStartOf="@+id/startGuideLine"
                app:layout_constraintEnd_toEndOf="@+id/endGuideLine"
                app:layout_constraintTop_toBottomOf="@+id/tv_biography"/>

            <TextView
                android:id="@+id/tv_acting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:text="@string/tv_acting"
                app:layout_constraintStart_toStartOf="@+id/startGuideLine"
                app:layout_constraintTop_toBottomOf="@+id/tv_known_for_movie"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/creditsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_acting"
                tools:listitem="@layout/widget_credits_vertical" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>
